--- a/app/src/main/res/layout/fragment_characters_list.xml
+++ b/app/src/main/res/layout/fragment_characters_list.xml
@@ -4,11 +4,5 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/rwCharacters"
         android:layout_width="match_parent"
-        android:layout_height="515dp"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.287" android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
